<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#6ff5cb"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RulesActivity">


    <ScrollView
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:background="#fcfcfc"
            android:orientation="vertical"
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:textColor="@color/colorAccent"
                android:layout_height="wrap_content"
                android:text="@string/rules1" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:text="@string/rules2"
                android:textColor="@color/colorAccent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:text="@string/rules3"
                android:textColor="@color/colorAccent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:text="@string/rules4"
                android:textColor="@color/colorAccent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:text="@string/rules5"
                android:textColor="@color/colorAccent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_marginTop="2dp"
                android:layout_width="match_parent"
                android:text="@string/link"
                android:autoLink="web"
                android:linksClickable="true"
                android:layout_marginBottom="50dp"
                android:textColor="@color/colorAccent"
                android:layout_height="wrap_content" />

        </LinearLayout>


    </ScrollView>

</LinearLayout>